--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,9 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-    background-color: #f5f9e9;
+  background-color: #f5f9e9;
+  color: #515751;
+  line-height: 1.6;
 }
 
 a {
