--- a/styles/globals.css
+++ b/styles/globals.css
@@ -38,3 +38,11 @@ blockquote {
   padding: 1rem 2rem;
   border-radius: 4px;
 }
+
+img.emoji {
+  height: 1.2em;
+  width: 1.2em;
+  margin: 0 .05em 0 .1em;
+  vertical-align: -0.1em;
+  display: inline;
+}
