--- a/styles/profile.module.scss
+++ b/styles/profile.module.scss
@@ -19,10 +19,7 @@
 
     img {
         width: 2.5rem;
+        border-radius: 2.5rem / 2;
         margin: 12px;
     }
-}
-
-.aboutContainer {
-    
 }
