--- a/styles/profile.module.scss
+++ b/styles/profile.module.scss
@@ -5,6 +5,8 @@
 .profileImage {
     width: 100px;
     border-radius: 50px;
+    border-width: 2px;
+    border-color: #515751;
     margin: 2rem auto 0;
 }
 
