--- a/styles/profile.module.scss
+++ b/styles/profile.module.scss
@@ -5,9 +5,9 @@
 .profileImage {
     width: 100px;
     border-radius: 50px;
-    border-width: 2px;
-    border-color: #515751;
+    border: 2px solid #515751;
     margin: 2rem auto 0;
+    box-shadow: 0 10px 25px 0 rgba(0, 0, 0, .1);
 }
 
 .title {
