Updated design with new header

--- a/styles/layout.module.scss
+++ b/styles/layout.module.scss
@@ -21,10 +21,8 @@
 }
 
 .headerLogo {
-    font-weight: bold;
-    font-size: larger;
-    a {
-        color: #36453B;
+    img {
+        width: 50px;
     }
 }
 
