Updated about me page

--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -19,3 +19,9 @@
 .comingSoon {
     margin-top: 32px;
 }
+
+.profileText {
+    padding-top: 12px;
+    font-size: 1.5rem;
+    font-weight: bold;
+}
