--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -22,6 +22,11 @@
         font-weight: bold;
     }
 
+    .profileDescriptionEn {
+        font-size: calc(0.5vw + 0.5rem);
+        font-weight: bold;
+    }
+
     button {
         margin-top: 12px;
     }
