Display like count

--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -45,6 +45,10 @@
             font-size: 1rem;
             font-weight: bold;
             padding: 4px;
+
+            small {
+                padding-right: 4px;
+            }
         }
 
         .thumbnail {
