--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -1,12 +1,15 @@
 // Common styles for the home page
 .heading {
-    margin-top: 2rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-
     .headingTitle {
         margin-top: 2rem;
+        margin-bottom: 0;
+    }
+
+    .sectionDescription {
+        display: block;
+        text-align: left;
+        margin-top: 0;
+        font-size: medium;
     }
 }
 
