Fix color and font size

--- a/styles/layout.module.scss
+++ b/styles/layout.module.scss
@@ -2,7 +2,7 @@
     max-width: 42rem;
     padding: 0 1rem;
     margin: 0 auto 6rem;
-    background-color: #f5f9e9;
+    background-color: #fcfbf7;
 }
 
 .headerContainer {
