--- a/styles/post.module.scss
+++ b/styles/post.module.scss
@@ -11,3 +11,11 @@
     height: 300px;
     width: 100%;
 }
+
+.postContent {
+    p {
+        font-size: 16px;
+        letter-spacing: .8px;
+        line-height: 1.6;
+    }
+}
