--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background-color: #f5f9e9;
+  background-color: #fcfbf7;
   color: #515751;
   line-height: 1.6;
   font-size: large;
@@ -28,7 +28,7 @@ img {
   background-color: #515751;
   padding: 8px 12px;
   font-weight: bold;
-  color: #f5f9e9;
+  color: #fcfbf7;
   cursor: pointer;
 }
 
